Standardize Bluebix offer letter layout, fix font size, footers, and eliminate vertical whitespace gaps across pages

--- a/static/css/bluebix_offer.css
+++ b/static/css/bluebix_offer.css
@@ -218,13 +218,19 @@ ul.bullets li {
 
 /* Page 2 overrides */
 #page-2 p {
-    margin-bottom: 10.0pt;
+    margin-bottom: 7.5pt;
 }
 #page-2 .contingency-list {
-    margin-bottom: 10.0pt;
+    margin-bottom: 7.5pt;
 }
 #page-2 .contingency-item {
-    margin-bottom: 12.0pt;
+    margin-bottom: 7.5pt;
+}
+#page-2 .sub-list {
+    margin-top: 2.0pt;
+}
+#page-2 .sub-item {
+    margin-bottom: 3.5pt;
 }
 
 /* Page 3 overrides */
@@ -238,37 +244,37 @@ ul.bullets li {
     margin-bottom: 7.5pt;
 }
 #page-3 .sub-list {
-    margin-top: 3.0pt;
+    margin-top: 2.0pt;
 }
 #page-3 .sub-item {
-    margin-bottom: 5.0pt;
+    margin-bottom: 3.5pt;
 }
 
 /* Page 4 overrides */
 #page-4 {
-    font-size: 9.8pt;
-    line-height: 1.1;
+    font-size: 10.5pt;
+    line-height: 1.15;
 }
 #page-4 p {
-    margin-bottom: 3pt;
+    margin-bottom: 4pt;
 }
 #page-4 .sub-list {
-    margin-bottom: 3pt;
+    margin-bottom: 4pt;
 }
 #page-4 .sub-item {
-    margin-bottom: 1.5pt;
+    margin-bottom: 2pt;
 }
 #page-4 ul.bullets {
-    margin-bottom: 3pt;
+    margin-bottom: 4pt;
 }
 #page-4 ul.bullets li {
-    margin-bottom: 1pt;
+    margin-bottom: 1.5pt;
 }
 #page-4 .signatures-wrapper {
-    margin-top: 6pt;
+    margin-top: 8pt;
 }
 #page-4 .sig-img {
-    height: 20pt;
+    height: 22pt;
     margin-bottom: 2pt;
 }
 
